[package]
name = "egg-sketches"
version = "0.1.0"
authors = ["Thomas Koehler <thomas.koehler@thok.eu>"]
edition = "2021"
description = "sketches for egg"
repository = "https://github.com/Bastacyclop/egg-sketches"
readme = "README.md"
license = "MIT"
keywords = ["e-graph", "sketch"]

[dependencies]
#egg = "0.9.0"
egg = { git = "https://github.com/Bastacyclop/egg.git", rev = "b530da14f8373e645180240d73f621767fa689fa" }
thiserror = "1.0.31"
fxhash = "0.2.1"
hashbrown = "0.12.1"
indexmap = "1.8.1"