[package]
name = "egg-sketches"
version = "0.2.0"
authors = ["Thomas Koehler <thomas.koehler@thok.eu>"]
edition = "2021"
description = "sketches for egg"
repository = "https://github.com/Bastacyclop/egg-sketches"
readme = "README.md"
license = "MIT"
keywords = ["e-graph", "sketch"]

[features]
util = ["dep:memory-stats"]

[dependencies]
# egg = "0.9.5"
egg = { git = "https://github.com/egraphs-good/egg.git", rev = "1458b82" }
thiserror = "1.0.31"
fxhash = "0.2.1"
hashbrown = "0.12.1"
indexmap = "1.8.1"

memory-stats = { version = "1.0.0", optional = true }

[dev-dependencies]
ordered-float = "3.0.0"